src/test/ui/parser/raw/raw-byte-string-literals.stderr
error: bare CR not allowed in raw string
  --> $DIR/raw-byte-string-literals.rs:4:9
   |
LL |     br"a";
   |         ^

error: raw byte string must be ASCII
  --> $DIR/raw-byte-string-literals.rs:5:8
   |
LL |     br"é";
   |        ^ must be ASCII

error: found invalid character; only `#` is allowed in raw string delimitation: ~
  --> $DIR/raw-byte-string-literals.rs:6:5
   |
LL |     br##~"a"~##;
   |     ^^^^^

error: aborting due to 3 previous errors

